# waypoint-os

./: .dockerignore  .env.example  .gitignore  .impeccable.md  ADD_DATES_INVESTIGATION_COMPLETE.md  AGENTS.md  AGENT_READINESS_SUMMARY.txt  AI_AGENT_SYSTEM_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DATEWINDOW_FIX_ANALYSIS.md  DESIGN.md  Dockerfile  HERMES_DEVELOPMENT_SUMMARY.txt  MULTI_AGENT_INFRASTRUCTURE_SUMMARY.txt  Procfile  README.md  SCHEMA_MAPPER_IMPLEMENTATION_SUMMARY.md  SKILL.md  TESTING_SETUP.md  TEST_INFRASTRUCTURE_PLAN.md  TODO.md  Waypoint OS Design _offline_.html  _analyse.py  alembic.ini  app.py  audit_test_results.txt  dev.sh  docker-compose.yml  e2e_test_callcapture.py  fly.toml  generate_scenario.py  inspect_page.py  issue_review.md  main.py  motto.md  motto_v2.md  motto_v3.md  pyproject.toml  (+8 more)
.agent/: AGENT_KICKOFF_PROMPT.txt  SESSION_CONTEXT.md  STEP1_ENV.sh
.claude/: settings.local.json
.qwen/: settings.json  settings.json.orig
.runtime/: eslint-current-after-smallfix.json  eslint-current.json
Archive/: PART_1_CONTINUATION_2026-04-13.md  PART_1_RAW.md  PART_2_RAW.md  PART_2_RAW_2026-04-13.md
Docs/: ACTIVITY_SUITABILITY_MATRIX_WEB_FINDINGS_2026-04-16.md  AGENCY_ONBOARDING_READINESS_CHECKLIST_2026-04-27.md  AGENCY_OWNER_INTERVIEW_GUIDE_2026-04-27.md  AGENCY_SCOPE_AUDIT_2026-04-27.md  AGENTIC_DATA_FLOW_AND_IMPLEMENTATION_PLAN_2026-04-22.md  AGENTIC_FLOW_COMPREHENSIVE_AUDIT_2026-06-19.md  AGENTIC_FLOW_DEEP_AUDIT_2026-06-19.md  AGENTIC_PIPELINE_CODE_AUDIT_2026-04-27.md  AGENT_FEEDBACK_LOOP_SPEC_2026-04-22.md  AGENT_READINESS_ASSESSMENT_2026-04-22.md  AI_AGENT_SYSTEM_READINESS_ASSESSMENT_2026-04-22.md  AI_EXTRACTION_RESEARCH_SUMMARY_2026-04-28.md  AI_WORKFORCE_REGISTRY_CONTRACT_2026-04-22.md  ANALYTICS_PROGRAM_TRACKER.md  ANALYTICS_TRACKING_PLAN_AUDIT_2026-05-01.md  API_REFERENCE_BFF_2026-04-24.md  API_ROUTE_AUDIT_2026-04-23.md  API_ROUTE_FIX_PLAN_2026-04-24.md  API_ROUTE_FIX_REPORT_2026-04-24.md  API_ROUTE_FIX_REPORT_2026-04-24.md.bak  APP_STATE_ANALYSIS_MISSING_FRONT_DOOR_2026-04-23.md  ARCHITECTURE_BASELINE_AUDIT_2026-05-02.md  ARCHITECTURE_DECISION_D1_AUTONOMY_GRADIENT_2026-04-18.md  ARCHITECTURE_DECISION_D2_FREE_ENGINE_PERSONA_2026-04-18.md  ARCHITECTURE_DECISION_D3_SOURCING_HIERARCHY_2026-04-18.md  ARCHITECTURE_DECISION_D4_D6_SUITABILITY_AUDIT_2026-04-16.md  ARCHITECTURE_DECISION_D4_SUBDECISIONS_ADDENDUM_2026-04-18.md  ARCHITECTURE_DECISION_D5_OVERRIDE_LEARNING_2026-04-18.md  ARCHITECTURE_DECISION_LLM_CACHE_NB05_NB06_2026-04-16.md  ARCHITECTURE_DECISION_SPINE_API_2026-04-15.md  ARCHITECTURE_IDENTITY_UNIFICATION.md  ARCHITECTURE_PERFORMANCE_TRACEABILITY.md  ARCHITECTURE_REVIEW_2026-04-28.md  ARCHITECT_REVIEW_FINDINGS.md  ARCHITECT_REVIEW_V2.md  ASSIGNMENT_ESCALATION_STATE_MACHINE_SPEC_2026-04-22.md  ASSIGNMENT_SIGNAL_TAXONOMY_SPEC_2026-04-24.md  AUDIT_AND_IMPLEMENTATION_2026-05-04.md  AUDIT_AND_INTELLIGENCE_ENGINE.md  AUDIT_CLOSURE_TRIAGE_2026-04-26.md  (+478 more)
alembic/: env.py
data/: README.md  workflows.json
docker/: docker-compose.otel.yml
frontend/: AGENTS.md  DESIGN.md  README.md  instrumentation.ts  motto_v2.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vitest.config.ts  vitest.setup.tsx
memory/: HOLISTIC_PROJECT_ASSESSMENT.md  MEMORY.md  codebase_analysis_2026-04-12.md  project_thesis.md  routing_and_optimization_strategy.md
notebooks/: 01_intake_and_normalization.ipynb  02_PERSONA_SCENARIO_COVERAGE.md  02_SCENARIO_TEST_RESULTS.md  02_gap_and_decision.ipynb  02_gap_and_decision_contract.md  03_session_strategy.ipynb  03_session_strategy_contract.md  04_eval_runner.ipynb  05_golden_path.ipynb  06_shadow_runner.ipynb  15_MISSING_CONCEPTS.md  FIELD_DICTIONARY_AND_MIGRATION.md  NB02_V02_SPEC.md  NB03_V02_SPEC.md  NEXT_STEPS.md  agency_context_to_plan_prompt_starter.ipynb  scenario_analysis.md  stash_inspect.ipynb  test_02_comprehensive.py  test_scenarios_realworld.py
scripts/: backfill_feedback.py  bootstrap_public_checker_agency.py  check_rls_coverage.py  generate_d6_gate_snapshot.py  (+12 more)
(+3553 files in other folders)
