[project]
name = "travel-agency-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "streamlit>=1.40.0",
    # --- Auth & Database (Phase 0) ---
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.3.0",
    "pydantic-to-typescript>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# =============================================================================
# LLM Dependencies (Optional - Install as Needed)
# =============================================================================
# To install LLM support:
#   uv add --group llm google-generativeai
#   uv add --group llm transformers torch sentencepiece
#
# Or install all: uv add --group llm --all-groups llm
# =============================================================================
llm = [
    # Gemini API (primary - fast and cost-effective)
    "google-generativeai>=0.8.0",

    # OpenAI API (fallback)
    "openai>=1.50.0",

    # Local LLM support (HuggingFace transformers)
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
