[project]
name = "travel-agency-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "streamlit>=1.40.0",
    # --- Auth & Database (Phase 0) ---
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.3.0",
    "pydantic-to-typescript>=2.0.0",
    "cryptography>=42.0.0",
    # --- LLM Usage Guard (P4-03) ---
    "redis>=5.0.0",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

# =============================================================================
# LLM Dependencies (Optional - Install as Needed)
# =============================================================================
# To install LLM support:
#   uv add --group llm google-genai
#   uv add --group llm transformers torch sentencepiece
#
# Or install all: uv add --group llm --all-groups llm
# =============================================================================
llm = [
    # Gemini API (primary - google-genai is the successor to deprecated google-generativeai)
    "google-genai>=1.74.0",
    # OpenAI API (fallback)
    "openai>=1.50.0",
    # Local LLM support (HuggingFace transformers)
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore:builtin type.*has no __module__:DeprecationWarning",
]
